@@ -237,6 +237,10 @@ t/data/SPECS/orphans-1/ss1.spec
 t/data/SPECS/orphans-1/ss2.spec
 t/data/SPECS/orphans-1/t.spec
 t/data/SPECS/orphans-1/tt1.spec
+t/data/SPECS/orphans-1/u1.spec
+t/data/SPECS/orphans-1/u2.spec
+t/data/SPECS/orphans-1/u3.spec
+t/data/SPECS/orphans-1/u4.spec
 t/data/SPECS/orphans-2/a-2.spec
 t/data/SPECS/orphans-2/bb-2.spec
 t/data/SPECS/orphans-2/c-2.spec
