@@ -1,0 +1,14 @@
+Summary: x
+Name: u4
+Version: 1
+Release: 1
+License: x
+Group: x
+Url: x
+Requires: u3
+BuildRoot: %{_tmppath}/%{name}
+
+%description
+x
+
+%files
